--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,21 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.8.1</version>
+    <version>2.53.1</version>
 </dependency>
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.9.10</version>
     <scope>test</scope>
+</dependency> 
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.3</version>
 </dependency>
-    
   </dependencies>
 </project>
